fix layout navigation mobile

--- a/web/frontend/src/assets/styles/layouts/components/main-layout-topbar.scss
+++ b/web/frontend/src/assets/styles/layouts/components/main-layout-topbar.scss
@@ -12,6 +12,10 @@
     display: flex;
     align-items: center;
 
+    @media screen and (max-width: 48em) {
+      left: 3.5rem;
+    }
+
     & > * {
       margin-right: 12px !important;
     }
@@ -19,5 +23,13 @@
 
   &__TextBrand {
     color: #003a89;
+  }
+}
+
+.Md-Toggle__Navigation {
+  display: none;
+  @media screen and (min-width: 48em) {
+    display: flex;
+    align-items: center;
   }
 }
